<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.smartkids.game.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".color.ColorFragment">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/back_game"
            android:contentDescription="@string/background_image" />
        <FrameLayout
            android:id="@+id/parent_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_back"
            app:layout_constraintEnd_toEndOf="@+id/img_back"
            app:layout_constraintStart_toStartOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="@+id/img_back"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/img_shape"
                android:layout_width="@dimen/shape_width"
                android:layout_height="@dimen/shape_height"
                tools:src="@drawable/pink"
                app:src="@{viewModel.shape}"
                android:contentDescription="@string/color_image" />
        </FrameLayout>
        <ImageView
            android:id="@+id/img_error"
            android:layout_width="@dimen/shape_width"
            android:layout_height="@dimen/shape_height"
            app:layout_constraintBottom_toBottomOf="@+id/parent_color"
            app:layout_constraintEnd_toEndOf="@+id/parent_color"
            app:layout_constraintStart_toStartOf="@+id/parent_color"
            app:layout_constraintTop_toTopOf="@+id/parent_color"
            app:layout_constraintVertical_bias="0.0"
            tools:src="@drawable/ic_highlight_off_black_24dp"
            android:src="@drawable/ic_highlight_off_black_24dp"
            android:visibility="invisible"
            android:contentDescription="@string/error_image" />

        <ImageButton
            android:id="@+id/object_1"
            android:layout_width="@dimen/object_width"
            android:layout_height="@dimen/object_height"
            android:layout_marginStart="16dp"
            android:background="@drawable/btn_img_background"
            android:contentDescription="@string/object_1"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_color"
            tools:src="@drawable/pink_1"
            app:src="@{viewModel.object1}"
            />

        <ImageButton
            android:id="@+id/object_2"
            android:layout_width="@dimen/object_width"
            android:layout_height="@dimen/object_height"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/btn_img_background"
            android:contentDescription="@string/object_2"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/object_3"
            app:layout_constraintStart_toEndOf="@+id/object_1"
            app:layout_constraintTop_toBottomOf="@+id/parent_color"
            app:layout_constraintVertical_bias="0.504"
            tools:src="@drawable/red_1"
            app:src="@{viewModel.object2}"
            />

        <ImageButton
            android:id="@+id/object_3"
            android:layout_width="@dimen/object_width"
            android:layout_height="@dimen/object_height"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_img_background"
            android:contentDescription="@string/object_3"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_back"
            app:layout_constraintTop_toBottomOf="@+id/parent_color"
            tools:src="@drawable/green_1"
            app:src="@{viewModel.object3}"
            />

        <TextView
            android:id="@+id/score_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:textColorLink="@color/jd_red"
            android:textSize="@dimen/score_size"
            android:textStyle="bold"
            android:text="@{viewModel.scoreBoard}"
            app:layout_constraintBottom_toBottomOf="@+id/img_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="10" />

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/score_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/score_board"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>